--- a/digital_system_n2.ucf
+++ b/digital_system_n2.ucf
@@ -5,18 +5,18 @@ NET "DATA[3]" LOC = B4;
 NET "DATA[2]" LOC = K3;
 NET "DATA[1]" LOC = L3;
 
-NET "Seven_segments_display[6]" LOC = M12;
-NET "Seven_segments_display[5]" LOC = L13;
-NET "Seven_segments_display[4]" LOC = P12;
-NET "Seven_segments_display[3]" LOC = N11;
-NET "Seven_segments_display[2]" LOC = N14;
-NET "Seven_segments_display[1]" LOC = H12;
-NET "Seven_segments_display[0]" LOC = L14;
+NET "SEVEN_SEGMENTS_DISPLAY[6]" LOC = M12;
+NET "SEVEN_SEGMENTS_DISPLAY[5]" LOC = L13;
+NET "SEVEN_SEGMENTS_DISPLAY[4]" LOC = P12;
+NET "SEVEN_SEGMENTS_DISPLAY[3]" LOC = N11;
+NET "SEVEN_SEGMENTS_DISPLAY[2]" LOC = N14;
+NET "SEVEN_SEGMENTS_DISPLAY[1]" LOC = H12;
+NET "SEVEN_SEGMENTS_DISPLAY[0]" LOC = L14;
 
-NET "Anodes[3]" LOC = K14;
-NET "Anodes[2]" LOC = M13;
-NET "Anodes[1]" LOC = J12;
-NET "Anodes[0]" LOC = F12;
+NET "ANODES[3]" LOC = K14;
+NET "ANODES[2]" LOC = M13;
+NET "ANODES[1]" LOC = J12;
+NET "ANODES[0]" LOC = F12;
 
 NET "BTN_H1" LOC = A7;
 NET "BTN_H0" LOC = M4;
